--- a/FF6PRE/Views/MainMenuView.xaml
+++ b/FF6PRE/Views/MainMenuView.xaml
@@ -7,26 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1200">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Left" Width="200">
-            <Menu HorizontalAlignment="Stretch" FontSize="16">
-                <Menu.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                        </Grid>
-                    </ItemsPanelTemplate>
-                </Menu.ItemsPanel>
-                <MenuItem Grid.Row="0" Command="{Binding GoToPathSelection}" Header="Asset path selection" />
-                <MenuItem Grid.Row="1" IsEnabled="{Binding IsAiEnabled}" Command="{Binding GoToAiEditor}" Header="AI scripts" />
-                <MenuItem Grid.Row="2" IsEnabled="{Binding IsSaveEnabled}" Command="{Binding SaveFiles}" Header="Save" />
-                <MenuItem Grid.Row="3" Command="{Binding ExitProgram}" Header="Exit" />
-            </Menu>
-        </StackPanel>
+        <Menu DockPanel.Dock="Top" FontSize="16">
+            <MenuItem Header="_File">
+                <MenuItem IsEnabled="{Binding IsSaveEnabled}" Command="{Binding SaveFiles}" Header="_Save" />
+                <MenuItem Command="{Binding ExitProgram}" Header="_Exit" />
+            </MenuItem>
+            <MenuItem Header="_Views">
+                <MenuItem Command="{Binding GoToPathSelection}" Header="_Asset path selection" />
+                <MenuItem IsEnabled="{Binding IsAiEnabled}" Command="{Binding GoToAiEditor}" Header="_AI scripts" />
+            </MenuItem>
+        </Menu>
         <Grid DockPanel.Dock="Right">
             <ContentControl Content="{Binding CurrentView}"/>
         </Grid>
