--- a/FF6PRE/UC/ActValues.xaml
+++ b/FF6PRE/UC/ActValues.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="FF6PRE.UC.DefaultValues"
+﻿<UserControl x:Class="FF6PRE.UC.ActValues"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FF6PRE.UC"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="242">
+             d:DesignHeight="400" d:DesignWidth="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -19,87 +19,166 @@
             <RowDefinition />
             <RowDefinition  Height="15"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="{Binding Title, RelativeSource={RelativeSource AncestorType=UserControl}}" FontSize="16" VerticalContentAlignment="Center" />
+        <Label Grid.Row="0" Content="Ability / Percentage" FontSize="16" VerticalContentAlignment="Center" />
         <DockPanel Grid.Row="1" LastChildFill="True">
             <Label Content="1:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand1, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button1Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value1, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue1, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions1, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription1, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue1, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="2" LastChildFill="True">
             <Label Content="2:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand2, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button2Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value2, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue2, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions2, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription2, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue2, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="3" LastChildFill="True">
             <Label Content="3:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand3, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button3Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value3, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue3, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions3, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription3, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue3, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="4" LastChildFill="True">
             <Label Content="4:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand4, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button4Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value4, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue4, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions4, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription4, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue4, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="5" LastChildFill="True">
             <Label Content="5:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand5, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button5Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value5, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue5, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions5, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription5, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue5, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="6" LastChildFill="True">
             <Label Content="6:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand6, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button6Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value6, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue6, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions6, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription6, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue6, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="7" LastChildFill="True">
             <Label Content="7:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand7, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button7Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value7, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue7, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions7, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription7, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue7, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
         <DockPanel Grid.Row="8" LastChildFill="True">
             <Label Content="8:" FontSize="16" HorizontalAlignment="Left" VerticalContentAlignment="Center" DockPanel.Dock="Left" />
             <Button Style="{DynamicResource ButtonStyleDefaultValues}" Height="28" Width="28" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,0,6,0"
                     Command="{Binding ButtonCommand8, RelativeSource={RelativeSource AncestorType=UserControl}}"
                     Background="{Binding Button8Brush, TargetNullValue={x:Null}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-            <TextBox FontSize="16" Height="28" Margin="6,0,6,0"
+            <TextBox FontSize="16" Height="28" Width="50" Margin="6,0,6,0" DockPanel.Dock="Right"
                      Text="{Binding Value8, RelativeSource={RelativeSource AncestorType=UserControl}, UpdateSourceTrigger=PropertyChanged}"
                      IsEnabled="{Binding IsEnabledValue8, RelativeSource={RelativeSource AncestorType=UserControl}}"
                      Style="{DynamicResource DefaultValuesTextBox}"/>
+            <local:FilteredComboBox FontSize="16" Height="28" Margin="6,0,0,0"
+                                    ItemsSource="{Binding Descriptions8, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    SelectedItem="{Binding SelectedDescription8, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    IsEnabled="{Binding IsEnabledValue8, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <local:FilteredComboBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel VirtualizationMode="Recycling" />
+                    </ItemsPanelTemplate>
+                </local:FilteredComboBox.ItemsPanel>
+            </local:FilteredComboBox>
         </DockPanel>
     </Grid>
 </UserControl>
